
- :meth:`Environment.keys` is now a iterator to match :meth:`dict.keys`,
  also an interator in Python 3.

- Target version of `ggplot2` library is 2.2.1.

- Option `stringsasfactors` in the constructor for the class `DataFrame` (if `False`, the
  strings are no longer converted to factors, and when converting from pandas data frames
  the default is to no longer convert columns of strings to factors. 

Bugs fixed
----------

- :func:`numpy.float128` is not available on all platforms. The unit test
  for it is now skipped on systems where it is not present (issue #347)

- R pairlist objects can now be sliced (and issue #380 is resolved).

- Passing parameters names that are empty string to R function was
  causing a segfault (issue #409).

- Trying to build an atomic R vector from a Python object that has a length,
  but it not a sequence nor an iterator was causing a segfault (issue #407).


Release 2.8.6
=============

Bugs fixed
----------

- Trying to build an atomic R vector from a Python object that has a length,
  but it not a sequence nor an iterator was causing a segfault (issue #407 -
  backport from rpy2-2.9.0).


Release 2.8.5
=============

Bugs fixed
----------

- The defintion of the method :class:`rpy2.rlike.container.OrdDict.items`
  was incorrect, and so was the documentation for `rcall` (issue #383)
  
- Giving an empty sequence to :meth:`robjects.sequence_to_vector` is now
  raising a :class:`ValueError` rather than fail with an
  :class:`UnboundLocalError` (see issue #388).

- :meth:`robjects.robject.RSlots.items` is now working (see pull request #57).


Release 2.8.4
=============

Bugs fixed
----------

- The context manager :func:`rpy2.robjects.lib.grdevices.render_to_file`
  is no longer trying to impose a file name generated by :mod:`tempfile`
  (issue #371)

- The symbol `LISTSXP` (corresponding to R pairlist objects) was not
  imported from the C module in rpy2.

- The functions `scale_linetype_discrete` and `scale_linetype_continuous`